# kaggle_sample

./: .gitignore
titanic/: Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
titanic/notebook/: eda.ipynb  ja-plot.ipynb  prep_train_pred.ipynb  titanic.ipynb
